tests/ui/nested_option.stderr
Error [E0309]: `??` isn't allowed on a type
  --> tests/ui/nested_option.jet:1:14
    |
  1 | fn f() -> Int?? {
    |              ^
 Why: an optional value is written `T?` once — there's no optional optional
 Fix: use a single `?`, like `Int?`
